--- a/src/app/pages/navbar/navbar.component.html
+++ b/src/app/pages/navbar/navbar.component.html
@@ -1,15 +1,14 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-primary">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Inicio</a>
+    <a class="navbar-brand" href="reporte">Reporte</a>
+<!--     <a class="navbar-brand" href="facturacion">Facturación</a> -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" href="facturacion" aria-current="page">Facturación</a>
-        </li>
       </ul>
       <form class="d-flex">
         <button class="btn btn-danger" (click)="CerrarSesion()" type="submit">Salir</button>
