--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -39,11 +39,15 @@
           <label style="width: 150px;">SERIE Y NUMERO <b style="color: red;">(*)</b></label>
         </div>
         <div class="col-2">
-         <!--  <input type="text" class="form-control" maxlength="13" [(ngModel)]="serieNumero"> -->
-          <select [(ngModel)]="serieNumero" class="form-select">
-            <option value="">Seleccione una serie</option>
-            <option value="{{item.SERIE}}" *ngFor="let item of arraySerie">{{item.SERIE}}</option>
-          </select>
+          <div class="input-group mb-1">
+            <select [(ngModel)]="serieNumero" class="form-select">
+              <option value="">Seleccione una serie</option>
+              <option value="{{item.SERIE}}" *ngFor="let item of arraySerie">{{item.SERIE}}</option>
+            </select>
+            <div class="input-group-append">
+              <button class="input-group-text" (click)="listarSerie(Serie)">...</button>
+            </div>
+          </div>
         </div>
         <div class="col-2">
           <label style="width: 150px;">DESTINATARIO <b style="color: red;">(*)</b></label>
@@ -258,23 +262,13 @@
 </ng-template>
 <ng-template #Transportista>
   <div class="card">
-    <div class="card-header text-center">
-      <h5>TRANSPORTISTA</h5>
+    <div class="card-header">
+      <div class="container">
+        <h5>TRANSPORTISTA &nbsp; &nbsp;</h5>
+        <button class="btn btn-secondary" (click)="abrirModal(CrudTransportista)">+</button>
+      </div>
     </div>
     <div class="card-body">
-      <div class="row">
-        <div class="col-3">
-          <label style="width: 150px;">TRANSPORTISTA</label>
-        </div>
-        <div class="col-9">
-          <div class="input-group mb-1">
-            <input type="text" class="form-control">
-            <div class="input-group-append">
-              <button class="input-group-text" (click)="abrirModal(CrudTransportista)">+</button>
-            </div>
-          </div>
-        </div>
-      </div>
       <div class="table-responsive" style="height: 400px;">
         <table class="table table-bordered table-hover">
           <thead>
@@ -283,16 +277,18 @@
               <th scope="col">Tipo Doc</th>
               <th scope="col">Razon social</th>
               <th scope="col">N° Registro MTC</th>
+              <th scope="col" style="text-align: center;">Opt</th>
             </tr>
           </thead>
           <tbody>
-            <tr
-              (click)="asignarTransportista(item.NUMERODOCUMENTOTRANSPORTISTA,item.RAZONSOCIALTRANSPORTISTA,item.TIPODOCUMENTOTRANSPORTISTA,item.NUMEROREGISTROMTC)"
-              *ngFor="let item of transportistas" style="cursor: pointer;">
-              <th scope="row">{{item.NUMERODOCUMENTOTRANSPORTISTA}}</th>
-              <td>{{item.TIPODOCUMENTOTRANSPORTISTA}}</td>
-              <td>{{item.RAZONSOCIALTRANSPORTISTA}}</td>
-              <td>{{item.NUMEROREGISTROMTC}}</td>
+            <tr *ngFor="let item of transportistas" style="cursor: pointer;">
+              <th scope="row" (click)="asignarTransportista(item.NUMERODOCUMENTOTRANSPORTISTA,item.RAZONSOCIALTRANSPORTISTA,item.TIPODOCUMENTOTRANSPORTISTA,item.NUMEROREGISTROMTC)">{{item.NUMERODOCUMENTOTRANSPORTISTA}}</th>
+              <td (click)="asignarTransportista(item.NUMERODOCUMENTOTRANSPORTISTA,item.RAZONSOCIALTRANSPORTISTA,item.TIPODOCUMENTOTRANSPORTISTA,item.NUMEROREGISTROMTC)">{{item.TIPODOCUMENTOTRANSPORTISTA}}</td>
+              <td (click)="asignarTransportista(item.NUMERODOCUMENTOTRANSPORTISTA,item.RAZONSOCIALTRANSPORTISTA,item.TIPODOCUMENTOTRANSPORTISTA,item.NUMEROREGISTROMTC)">{{item.RAZONSOCIALTRANSPORTISTA}}</td>
+              <td (click)="asignarTransportista(item.NUMERODOCUMENTOTRANSPORTISTA,item.RAZONSOCIALTRANSPORTISTA,item.TIPODOCUMENTOTRANSPORTISTA,item.NUMEROREGISTROMTC)">{{item.NUMEROREGISTROMTC}}</td>
+              <td style="color: red;cursor: pointer;text-align: center;" (click)="borrarTransportista(item.NUMERODOCUMENTOTRANSPORTISTA)"><i class="fa-solid fa-trash"
+                ></i>
+            </td>
             </tr>
           </tbody>
         </table>
@@ -303,22 +299,12 @@
 <ng-template #Chofer>
   <div class="card">
     <div class="card-header text-center">
-      <h5>Chofer</h5>
+      <div class="container">
+        <h5>CHOFER &nbsp; &nbsp;</h5>
+        <button class="btn btn-secondary" (click)="abrirModal(CrudChofer)">+</button>
+      </div>
     </div>
     <div class="card-body">
-      <div class="row">
-        <div class="col-3">
-          <label style="width: 150px;">Chofer</label>
-        </div>
-        <div class="col-9">
-          <div class="input-group mb-1">
-            <input type="text" class="form-control">
-            <div class="input-group-append">
-              <button class="input-group-text" (click)="abrirModal(CrudChofer)">+</button>
-            </div>
-          </div>
-        </div>
-      </div>
       <div class="table-responsive" style="height: 400px;">
         <table class="table table-bordered table-hover">
           <thead>
@@ -328,17 +314,19 @@
               <th scope="col">Razon social</th>
               <th scope="col">Brevete</th>
               <th scope="col">Placa</th>
+              <th scope="col" style="text-align: center;">Opt</th>
             </tr>
           </thead>
           <tbody>
-            <tr
-              (click)="asignarChofer(item.NUMERODOCUMENTOCHOFER,item.NOMBRE,item.APELLIDO,item.PLACAVEHICULO,item.TIPODOCUMENTOCHOFER,item.BREVETE)"
-              *ngFor="let item of chofer " style="cursor: pointer;">
-              <th scope="row">{{item.NUMERODOCUMENTOCHOFER}}</th>
-              <td>{{item.TIPODOCUMENTOCHOFER}}</td>
-              <td>{{item.NOMBRE+" "+item.APELLIDO}}</td>
-              <td>{{item.BREVETE}}</td>
-              <td>{{item.PLACAVEHICULO}}</td>
+            <tr *ngFor="let item of chofer " style="cursor: pointer;">
+              <th scope="row" (click)="asignarChofer(item.NUMERODOCUMENTOCHOFER,item.NOMBRE,item.APELLIDO,item.PLACAVEHICULO,item.TIPODOCUMENTOCHOFER,item.BREVETE)">{{item.NUMERODOCUMENTOCHOFER}}</th>
+              <td (click)="asignarChofer(item.NUMERODOCUMENTOCHOFER,item.NOMBRE,item.APELLIDO,item.PLACAVEHICULO,item.TIPODOCUMENTOCHOFER,item.BREVETE)">{{item.TIPODOCUMENTOCHOFER}}</td>
+              <td (click)="asignarChofer(item.NUMERODOCUMENTOCHOFER,item.NOMBRE,item.APELLIDO,item.PLACAVEHICULO,item.TIPODOCUMENTOCHOFER,item.BREVETE)">{{item.NOMBRE+" "+item.APELLIDO}}</td>
+              <td (click)="asignarChofer(item.NUMERODOCUMENTOCHOFER,item.NOMBRE,item.APELLIDO,item.PLACAVEHICULO,item.TIPODOCUMENTOCHOFER,item.BREVETE)">{{item.BREVETE}}</td>
+              <td (click)="asignarChofer(item.NUMERODOCUMENTOCHOFER,item.NOMBRE,item.APELLIDO,item.PLACAVEHICULO,item.TIPODOCUMENTOCHOFER,item.BREVETE)">{{item.PLACAVEHICULO}}</td>
+              <td style="text-align: center;cursor: pointer;"
+              (click)="borrarChofer(item.NUMERODOCUMENTOCHOFER);"><i
+                class="fa-solid fa-trash" style="font-size: 20px;color: rgb(255, 0, 0);"></i></td>
             </tr>
           </tbody>
         </table>
@@ -618,24 +606,13 @@
 </ng-template>
 <ng-template #Producto>
   <div class="card">
-    <div class="card-header text-center">
-      <h5>PRODUCTO</h5>
+    <div class="card-header">
+      <div class="container">
+        <h5>PRODUCTO &nbsp; &nbsp;</h5>
+        <button class="btn btn-secondary" (click)="abrirModal(CrudProducto)">+</button>
+      </div>
     </div>
     <div class="card-body" style="min-height: 200px;">
-      <div class="row">
-        <div class="col-2">
-          <label style="width: 100px;margin-top: 3px;margin-left: 30px;">Producto:</label>
-        </div>
-        <div class="col-5">
-          <div class="input-group mb-1">
-            <input type="text" class="form-control">
-            <div class="input-group-append">
-              <button class="input-group-text" (click)="abrirModal(CrudProducto)">+</button>
-            </div>
-          </div>
-        </div>
-
-      </div>
       <div class="table-responsive" style="max-height: 400px;">
         <table class="table table-bordered table-hover">
           <thead>
@@ -872,29 +849,18 @@
 </ng-template>
 <ng-template #Empresa>
   <div class="card">
-    <div class="card-header text-center">
-      <h5>EMPRESA</h5>
+    <div class="card-header">
+      <div class="container">
+        <h5>EMPRESA &nbsp; &nbsp;</h5>
+        <button class="btn btn-secondary" (click)="abrirModal(CrudEmpresa)">+</button>
+      </div>
     </div>
     <div class="card-body">
-      <div class="row">
-        <div class="col-3">
-          <label style="width: 150px;">EMPRESA</label>
-        </div>
-        <div class="col-9">
-          <div class="input-group mb-1">
-            <input type="text" class="form-control">
-            <div class="input-group-append">
-              <button class="input-group-text" (click)="abrirModal(CrudEmpresa)">+</button>
-            </div>
-          </div>
-        </div>
-      </div>
       <div class="table-responsive" style="height: 400px;">
         <table class="table table-bordered table-hover">
           <thead>
             <tr>
               <th scope="col">N° Doc Emisor</th>
-              <th scope="col">Codigo Local Anexo</th>
               <th scope="col">Nombre</th>
               <th scope="col">Tipo Doc</th>
               <th scope="col">Razon social</th>
@@ -902,8 +868,6 @@
               <th scope="col">Dirección</th>
               <th scope="col">Distrito</th>
               <th scope="col">Provincia</th>
-              <th scope="col">Departamento</th>
-              <th scope="col">Pais</th>
               <th scope="col">Razón Comercial</th>
               <th scope="col">Opt</th>
             </tr>
@@ -911,7 +875,6 @@
           <tbody>
             <tr *ngFor="let item of tablaEmpresas">
               <th scope="row">{{item.numerodocumentoemisor}}</th>
-              <td>{{item.codigolocalanexo}}</td>
               <td>{{item.nombreempresa}}</td>
               <td>{{item.tipodocumentoemisor}}</td>
               <td>{{item.razonsocialemisor}}</td>
@@ -919,12 +882,9 @@
               <td>{{item.direccionemisor}}</td>
               <td>{{item.distritoemisor}}</td>
               <td>{{item.provinciaemisor}}</td>
-              <td>{{item.departamentoemisor}}</td>
-              <td>{{item.paisemisor}}</td>
               <td>{{item.razoncomercialemisor}}</td>
-              <td style="text-align: center;cursor: pointer;"
-                (click)="borrarEmpresa(item.numerodocumentoemisor,item.codigolocalanexo);"><i class="fa-solid fa-trash"
-                  style="font-size: 20px;color: rgb(255, 0, 0);"></i></td>
+              <td style="text-align: center;cursor: pointer;" (click)="borrarEmpresa(item.numerodocumentoemisor);"><i
+                  class="fa-solid fa-trash" style="font-size: 20px;color: rgb(255, 0, 0);"></i></td>
             </tr>
           </tbody>
         </table>
@@ -946,15 +906,6 @@
             <input type="text" ngModel class="form-control"
               [ngClass]="{'is-invalid': empresa.submitted&&empresa.controls['NUMERODOCUMENTOEMISOR'].errors}"
               name="NUMERODOCUMENTOEMISOR" placeholder="Ingrese el documento" required>
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="input" class="col-sm-2 col-form-label" style="width: 160px;"><a style="color: red;">(*)</a>
-            Codigo Local:</label>
-          <div class="col-sm-9">
-            <input type="text" ngModel class="form-control"
-              [ngClass]="{'is-invalid': empresa.submitted&&empresa.controls['CODIGOLOCALANEXO'].errors}"
-              name="CODIGOLOCALANEXO" placeholder="Ingrese el codigo del local anexo" required>
           </div>
         </div>
         <div class="form-group row">
@@ -1102,23 +1053,13 @@
 </ng-template>
 <ng-template #Origen>
   <div class="card">
-    <div class="card-header text-center">
-      <h5>ORIGEN</h5>
+    <div class="card-header">
+      <div class="container">
+        <h5>ORIGEN &nbsp; &nbsp;</h5>
+        <button class="btn btn-secondary" (click)="abrirModal(CrudOrigen)">+</button>
+      </div>
     </div>
     <div class="card-body">
-      <div class="row">
-        <div class="col-3">
-          <label style="width: 150px;">ORIGEN</label>
-        </div>
-        <div class="col-9">
-          <div class="input-group mb-1">
-            <input type="text" class="form-control">
-            <div class="input-group-append">
-              <button class="input-group-text" (click)="abrirModal(CrudOrigen)">+</button>
-            </div>
-          </div>
-        </div>
-      </div>
       <div class="table-responsive" style="height: 400px;">
         <table class="table table-bordered table-hover">
           <thead>
@@ -1126,7 +1067,7 @@
               <th scope="col">N° Doc Emisor</th>
               <th scope="col">Ubigeo</th>
               <th scope="col">Dirección</th>
-              <th scope="col">Opt</th>
+              <th scope="col" style="text-align: center;">Opt</th>
             </tr>
           </thead>
           <tbody>
@@ -1135,11 +1076,122 @@
               <td>{{item.ubigeoorigen}}</td>
               <td>{{item.direccionorigen}}</td>
               <td style="text-align: center;cursor: pointer;"
-                (click)="borrarEmpresa(item.numerodocumentoemisor,item.codigolocalanexo);"><i class="fa-solid fa-trash"
+                (click)="borrarOrigen(item.numerodocumentoemisor,item.ubigeoorigen,item.direccionorigen);"><i
+                  class="fa-solid fa-trash" style="font-size: 20px;color: rgb(255, 0, 0);"></i></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</ng-template>
+<ng-template #Serie>
+  <div class="card">
+    <div class="card-header">
+      <div class="container">
+        <h5>SERIE &nbsp; &nbsp;</h5>
+        <button class="btn btn-secondary" (click)="abrirModal(CrudSerie)">+</button>
+      </div>
+    </div>
+    <div class="card-body">
+      <div class="table-responsive" style="height: 400px;">
+        <table class="table table-bordered table-hover">
+          <thead>
+            <tr>
+              <th scope="col">N° Doc Emisor</th>
+              <th scope="col">Tipo Doc</th>
+              <th scope="col">Descripción</th>
+              <th scope="col">Serie</th>
+              <th scope="col">Correlativo</th>
+              <th scope="col">Opt</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let item of tablaSeries">
+              <th scope="row">{{item.numerodocumentoemisor}}</th>
+              <td>{{item.tipodocumento}}</td>
+              <td>{{item.descripcion}}</td>
+              <td>{{item.serie}}</td>
+              <td>{{item.correlativo}}</td>
+              <td style="text-align: center;cursor: pointer;"
+                (click)="borrarSerie(item.numerodocumentoemisor,item.serie)"><i class="fa-solid fa-trash"
                   style="font-size: 20px;color: rgb(255, 0, 0);"></i></td>
             </tr>
           </tbody>
         </table>
+      </div>
+    </div>
+  </div>
+</ng-template>
+<ng-template #CrudSerie>
+  <div class="card">
+    <div class="card-header">
+      <h5>Crear Serie</h5>
+    </div>
+    <div class="card-body">
+      <form (ngSubmit)="crearSerie(empresa)" #empresa="ngForm" id="empresa">
+        <div class="form-group row">
+          <label for="input" class="col-sm-2 col-form-label" style="width: 160px;"><a style="color: red;">(*)</a>
+            N° Documento:</label>
+          <div class="col-sm-9">
+            <input type="text" ngModel class="form-control"
+              [ngClass]="{'is-invalid': empresa.submitted&&empresa.controls['NUMERODOCUMENTOEMISOR'].errors}"
+              name="NUMERODOCUMENTOEMISOR" placeholder="Ingrese el documento" required>
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="input" class="col-sm-2 col-form-label" style="width: 160px;"><a style="color: red;">(*)</a> Tipo
+            Doc:</label>
+          <div class="col-sm-3">
+            <select ngModel [(ngModel)]="tipodocEmp" class="form-select" name="TIPODOCUMENTO" required>
+              <option value="01">DNI</option>
+              <option value="04">CARNET DE EXTRANJERIA</option>
+              <option value="06">RUC</option>
+              <option value="07">PASAPORTE</option>
+            </select>
+          </div>
+          <label for="input" class="col-sm-2 col-form-label" style="width: 180px;"><a style="color: red;">(*)</a> Tipo
+            Doc Afecto:</label>
+          <div class="col-sm-3">
+            <select ngModel [(ngModel)]="tipodocEmp" class="form-select" name="TIPODOCUMENTOAFECTO" required>
+              <option value="01">DNI</option>
+              <option value="04">CARNET DE EXTRANJERIA</option>
+              <option value="06">RUC</option>
+              <option value="07">PASAPORTE</option>
+            </select>
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="input" class="col-sm-2 col-form-label" style="width: 160px;"><a style="color: red;">(*)</a>
+            Descripción:</label>
+          <div class="col-sm-9">
+            <input type="text" ngModel class="form-control"
+              [ngClass]="{'is-invalid': empresa.submitted&&empresa.controls['DESCRIPCION'].errors}" name="DESCRIPCION"
+              placeholder="Ingrese su descripción" required>
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="input" class="col-sm-2 col-form-label" style="width: 160px;"><a style="color: red;">(*)</a>
+            Serie:</label>
+          <div class="col-sm-3">
+            <input type="text" ngModel class="form-control"
+              [ngClass]="{'is-invalid': empresa.submitted&&empresa.controls['SERIE'].errors}" name="SERIE"
+              placeholder="Ejemplo T001" maxlength="4" minlength="4" required>
+          </div>
+          <label for="input" class="col-sm-2 col-form-label" style="width: 160px;"><a style="color: red;">(*)</a>
+            Correlativo:</label>
+          <div class="col-sm-3">
+            <input type="text" ngModel class="form-control" [(ngModel)]="correlativo"
+              [ngClass]="{'is-invalid': empresa.submitted&&empresa.controls['CORRELATIVO'].errors}" name="CORRELATIVO"
+              placeholder="Ingrese el correlativo" required>
+          </div>
+        </div>
+      </form>
+      <div class="row mt-2">
+        <div style="text-align: right;">
+          <button class="btn btn-danger" style="width: 80px;margin-right: 5px;" (click)='salir()'>Salir</button>
+          <button class="btn btn-success" style="width: 90px;" form="empresa" type="submit">Aceptar</button>
+        </div>
       </div>
     </div>
   </div>
