--- a/src/app/pages/main/main.component.scss
+++ b/src/app/pages/main/main.component.scss
@@ -15,3 +15,8 @@ a{
 .selected-row {
   background-color: lightblue;
 }
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
